--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
   "permissions": [
     "webRequest",
     "webRequestBlocking",
-    "https://www.amazon.de/*"
+    "https://www.amazon.de/*",
+    "amazon.de"
   ],
   "background": {
     "scripts": ["background.js"]
