feat(bundling): typescript, webpack, karma

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Browser Add-On um Minkorrekt mittels des Amazon Affiliate Program zu unterstützen.",
   "main": "background.js",
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
+    "build": "webpack",
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -17,10 +20,19 @@
   },
   "homepage": "https://github.com/robertfoobar/minkorrekt-addon#readme",
   "devDependencies": {
+    "@types/jasmine": "^2.8.6",
+    "awesome-typescript-loader": "^3.4.1",
     "jasmine-core": "^3.0.0",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.1",
-    "karma-phantomjs-launcher": "^1.0.4"
-  }
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.9",
+    "ts-loader": "^3.5.0",
+    "typescript": "^2.7.1",
+    "webpack": "^3.11.0"
+  },
+  "dependencies": {}
 }
