--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "build": "webpack",
-    "test": "karma start"
+    "test": "karma start",
+    "start": "web-ext run"
   },
   "repository": {
     "type": "git",
